--- a/blog.html
+++ b/blog.html
@@ -66,8 +66,29 @@
           </div>
         </div>
       </div>
-  
       <!-- End Carousel Blog -->
   
+        <!-- Main Content -->
+    <div class="container-blog">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Artikel Terbaru</h2>
+          </div>
+          <div class="col-md-6 text-md-end">
+            <button class="btn btn-outline-success" id="load-more-btn">Lihat Semuanya</button>
+          </div>
+        </div>
+        <div class="row mt-4" id="blog-posts">
+          <!-- kartu blog ditampilkan di sini -->
+        </div>
+        <div class="row mt-4" id="pagination-container">
+          <!-- tombol-tombol pagination ditampilkan di sini -->
+        </div>
+      </div>
+      <!-- End Main Content -->
+  
+    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
