--- a/blog.html
+++ b/blog.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
   </head>
-<body>
-    <!-- Navbar -->
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light " style="height: 80px;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -37,58 +37,56 @@
           </div>
         </div>
       </nav>
-    <!-- End Navbar -->
+
 
     <!-- Carousel Blog -->
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="asset/gambar1.jpg" class="d-block rounded-4" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="asset/gambar1.jpg" class="d-block rounded-4" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
-          <div class="carousel-item">
-            <img src="asset/gambar2.jpg" class="d-block rounded-4" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img src="asset/gambar2.jpg" class="d-block rounded-4" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
-          <div class="carousel-item">
-            <img src="asset/gambar3.jpg" class="d-block rounded-4" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img src="asset/gambar3.jpg" class="d-block rounded-4" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
       </div>
-      <!-- End Carousel Blog -->
-  
-        <!-- Main Content -->
-    <div class="container-blog">
-        <div class="row">
-          <div class="col-md-6">
-            <h2>Artikel Terbaru</h2>
-          </div>
-          <div class="col-md-6 text-md-end">
-            <button class="btn btn-outline-success" id="load-more-btn">Lihat Semuanya</button>
-          </div>
-        </div>
-        <div class="row mt-4" id="blog-posts">
-          <!-- kartu blog ditampilkan di sini -->
-        </div>
-        <div class="row mt-4" id="pagination-container">
-          <!-- tombol-tombol pagination ditampilkan di sini -->
-        </div>
-      </div>
-      <!-- End Main Content -->
-  
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+    </div>
+
+    <!-- End Carousel Blog -->
+
+  <!-- Main Content -->
+<div class="container-blog">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Artikel Terbaru</h2>
+    </div>
+  </div>
+  <div class="row mt-4" id="blog-posts">
+    <!-- kartu blog ditampilkan di sini -->
+  </div>
+  <div class="col-md-6 text-md-end">
+    <button class="btn btn-outline-success" id="load-more-btn">Lihat Semuanya</button>
+  </div>
+</div>
+<!-- End Main Content -->
+
+
+<script src="main.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
 </html>
