--- a/blog.html
+++ b/blog.html
@@ -14,34 +14,38 @@
     
   </head>
   <body>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light " style="height: 80px;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="asset/logo.svg" alt="Logo" width="48 " height="48" class="d-inline-block align-text-top">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav me-auto">
-              <a class="nav-link" href="index.html">Beranda</a>
-              <a class="nav-link" href="cari-dokter.html">Cari Dokter</a>
-              <a class="nav-link" href="blog.html">Artikel</a>
-              <a class="nav-link" href="toko-obat.html">Toko Obat</a>
-            </div>
-            <div class="navbar-nav align-items-center">
-            <img src="asset/search.svg" alt="Icon 2" width="24" height="24" class="icon">
-            <img src="asset/cart.svg" alt="Icon 1" width="24" height="24" class="icon">
-            <button class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0"style="min-width: 144px;" >Daftar</button>
-            <button class="btn btn-success ms-lg-3" style="min-width: 144px;">Masuk</button>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="asset/logo.svg" alt="Logo" width="48 " height="48" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="navbar-nav me-auto">
+            <a class="nav-link" href="index.html">Beranda</a>
+            <a class="nav-link" href="cari-dokter.html">Cari Dokter</a>
+            <a class="nav-link" href="blog.html">Artikel</a>
+            <a class="nav-link" href="toko-obat.html">Toko Obat</a>
+          </div>
+          <div class="navbar-nav align-items-center">
+          <img src="asset/search.svg" alt="Icon 2" width="24" height="24" class="icon">
+          <img src="asset/cart.svg" alt="Icon 1" width="24" height="24" class="icon">
+          <a class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0"style="min-width: 144px;" href="daftar.html" >Daftar</a>
+          <a class="btn btn-success ms-lg-3" style="min-width: 144px;" href="login.html">Masuk</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
+  <!-- End Navbar -->
+
+    <!-- End Navbar -->
 
 
     <!-- Carousel Blog -->
-
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -67,24 +71,23 @@
         </div>
       </div>
     </div>
-
     <!-- End Carousel Blog -->
 
-  <!-- Main Content -->
-<div class="container-blog">
-  <div class="row">
-    <div class="col-md-6">
-      <h2>Artikel Terbaru</h2>
+    <!-- Main Content -->
+  <div class="container-blog">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Artikel Terbaru</h2>
+      </div>
+    </div>
+    <div class="row mt-4" id="blog-posts">
+      <!-- kartu blog ditampilkan di sini -->
+    </div>
+    <div class="col-md-6 text-md-end">
+      <button class="btn btn-outline-success" id="load-more-btn">Lihat Semuanya</button>
     </div>
   </div>
-  <div class="row mt-4" id="blog-posts">
-    <!-- kartu blog ditampilkan di sini -->
-  </div>
-  <div class="col-md-6 text-md-end">
-    <button class="btn btn-outline-success" id="load-more-btn">Lihat Semuanya</button>
-  </div>
-</div>
-<!-- End Main Content -->
+  <!-- End Main Content -->
 
 
 <script src="main.js"></script>
