--- a/detail-blog.html
+++ b/detail-blog.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Detail Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,33 +11,67 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light " style="height: 80px;">
-    <div class="container-fluid">
-     <a class="navbar-brand" href="#">
-        <img src="asset/logo.svg" alt="Logo" width="48 " height="48" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="navbar-nav me-auto">
-          <a class="nav-link" href="index.html">Beranda</a>
-          <a class="nav-link" href="cari-dokter.html">Cari Dokter</a>
-          <a class="nav-link" href="blog.html">Artikel</a>
-         <a class="nav-link" href="toko-obat.html">Toko Obat</a>
-      </div>
-      <div class="navbar-nav align-items-center">
-        <img src="asset/search.svg" alt="Icon 2" width="24" height="24" class="icon">
-        <img src="asset/cart.svg" alt="Icon 1" width="24" height="24" class="icon">
-        <button class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0"style="min-width: 144px;" >Daftar</button>
-        <button class="btn btn-success ms-lg-3" style="min-width: 144px;">Masuk</button>
-      </div>
-     </div>
-    </div>
-  </nav>
-<!-- End Navbar -->
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light " style="height: 80px;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="asset/logo.svg" alt="Logo" width="48 " height="48" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav me-auto">
+              <a class="nav-link" href="index.html">Beranda</a>
+              <a class="nav-link" href="cari-dokter.html">Cari Dokter</a>
+              <a class="nav-link" href="blog.html">Artikel</a>
+              <a class="nav-link" href="toko-obat.html">Toko Obat</a>
+            </div>
+            <div class="navbar-nav align-items-center">
+            <img src="asset/search.svg" alt="Icon 2" width="24" height="24" class="icon">
+            <img src="asset/cart.svg" alt="Icon 1" width="24" height="24" class="icon">
+            <button class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0"style="min-width: 144px;" >Daftar</button>
+            <button class="btn btn-success ms-lg-3" style="min-width: 144px;">Masuk</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    <!-- End Navbar -->
 
+    <div class="container">
+      <div class="header">
+      </div>
+      <div class="hero"></div>
+      <div class="paragraf">
+        <h3>How to write a book properly and correctly by paying attention to various parts to support the story</h3>
+        <br>
+        <p>Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once. We have a saboteur aboard. We know you’re dealing in stolen ore. But I wanna talk about the assassination attempt on Lieutenant Worf. Could someone survive inside a transporter buffer for 75 years? Fate. It protects fools, little children, and ships named “Enterprise.”</p>
+        <p>The game not big enough unless it scares you a little. Wait a minute – you’ve been declared dead. You can’t give orders around here. I’ll alert the crew. What? We’re not at all alike! Flair is what marks the difference between artistry and mere competence.</p>
+        <p>Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once. We have a saboteur aboard.</p>
+        <p>Could someone survive inside a transporter buffer for 75 years? Fate. It protects fools, little children, and ships named “Enterprise.”</p>
+        <p>Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once. We have a saboteur aboard. We know you’re dealing in stolen ore. But I wanna talk about the assassination attempt on Lieutenant Worf. Could someone survive inside a transporter buffer for 75 years? Fate. It protects fools, little children, and ships named “Enterprise.”</p>
+      </div>
+      <div class="content">
+        <div class="kiri">
+          <img src="https://i.ibb.co/DLtdnZ4/kiri.png" alt="">
+        </div>
+      </div>
+      <div class="content">
+        <div class="kanan">
+          <img src="https://i.ibb.co/gRTXsmk/kanan.png" alt="">
+        </div>
+        <div class="paragraf">
+          <p>What’s a knock-out like you doing in a computer-generated gin joint like this? But the probability of making a six is no greater than that of rolling a seven. I guess it’s better to be lucky than good.</p>
+          <p>Damage report! I’ve had twelve years to think about it. And if I had it to do over again, I would have grabbed the phaser and pointed it at you instead of them. Some days you get the bear, and some days the bear gets you. Ensign Babyface! I’m afraid I still don’t understand, sir. Mr. Crusher, ready a collision course with the Borg ship. Yesterday I did not know how to eat gagh. You’re going to be an interesting companion.</p>
+          <p>Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once. We have a saboteur aboard. We know you’re dealing in stolen ore. But I wanna talk about the assassination attempt on Lieutenant Worf. Could someone survive inside a transporter buffer for 75 years? Fate. It protects fools, little children, and ships named “Enterprise.”</p>
+        </div>
+      </div>
+    </div>
+
+
+    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
