--- a/blog.html
+++ b/blog.html
@@ -59,8 +59,59 @@
   </div>
   <!-- End Main Content -->
 
+    <!-- footer -->
 
-<script src="main.js"></script>
+<footer class="footer-section">
+
+  <div class="company">
+      <img class="img" src="image/logo.png" alt="penyakit6">
+      <p class="company-item" id="description">Medkit  berkomitmen untuk menyediakan
+          layanan telemedicine yang aman, andal, dan
+          terangkau bagi semua orang</p>
+  </div>
+
+  <div class="about">
+      <div class="fitur">
+          <h6 class="title">Fitur</h6>
+          <div class="fitur-item">
+              <a href="#">Booking</a>
+              <a href="">promo</a>
+              <a href="">Artikel</a>
+              <a href="">Cek Dokter</a>
+              <a href="">Penyakit</a>
+  
+          </div>
+      </div>
+
+      <div class="fitur">
+          <h6 class="title">Perusahaan</h6>
+         <div class="fitur-item">
+          <a href="">Tentang Kami</a>
+          <a  href="https://skilvul.com" id="link">Skilvul</a>
+          <a href="">Kontak Kami</a>
+         </div>
+          
+      </div>
+
+      <div class="fitur">
+          <h6 class="title">Dukungan</h6>
+          <div class="fitur-item">
+          <a href="">Privacy Policy</a>
+          <a href="">Kebijakan Editorial</a>
+          <a href="">Direktory Tag</a>
+          <a href="">Pusat Bantuan</a>
+      </div>
+      </div>
+  </div>
+
+</footer>
+<div class="copyright">
+  <p>@ . 2023 All Right Reserved</p>
+</div>
+
+    
+
+<script src="blog.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
