--- a/login.html
+++ b/login.html
@@ -1,20 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Akun</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- External Css -->
     <link rel="stylesheet" href="style.css">
-    <!-- Bootsrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/9f162bff11.js" crossorigin="anonymous"></script>
-
+    <title>Hello, world!</title>
   </head>
-<body>
+  <body>
+    
+    
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-body">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="image/logo.png" alt="" width="50" height="50">
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" style="font-weight: 700; color: var(--teal);"  aria-current="page" href="#">Beranda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cek Dokter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Artikel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Toko Obat</a>
+              </li>
+            </ul>
+            <a href="#" class="icon-menu" id="search">
+              <iconify-icon icon="ri:search-line" height="28"></iconify-icon>
+            </a>
+            <a href="#" class="icon-menu" id="cart">
+              <iconify-icon class="text-center" icon="solar:cart-4-bold" height="28"></iconify-icon>
+            </a>
+            <a href="" class="navbar-action-item">Masuk</a>
+            <a href="#" class="btn-primary">Daftar</a>
+  
+          </div>
+        </div>
+      </nav>
+  <!-- End Navbar -->
+  
+  
   <div class="text-daftar">
     <h4>Login Akun</h4>
   </div>
