--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- External Css -->
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="login-daftar.css">
+    
     <title>Hello, world!</title>
   </head>
   <body>
