--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" style="font-weight: 700; color: var(--teal);"  aria-current="page" href="#">Beranda</a>
+                <a class="nav-link active" style="font-weight: 700; color: var(--teal);"  aria-current="page" href="index.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cek Dokter</a>
+                <a class="nav-link" href="cek-dokter.html">Cek Dokter</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Artikel</a>
+                <a class="nav-link" href="blog.html">Artikel</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Toko Obat</a>
+                <a class="nav-link" href="toko.html">Toko Obat</a>
               </li>
             </ul>
             <a href="#" class="icon-menu" id="search">
@@ -49,8 +49,8 @@
             <a href="#" class="icon-menu" id="cart">
               <iconify-icon class="text-center" icon="solar:cart-4-bold" height="28"></iconify-icon>
             </a>
-            <a href="" class="navbar-action-item">Masuk</a>
-            <a href="#" class="btn-primary">Daftar</a>
+            <a href="login.html" class="navbar-action-item">Masuk</a>
+            <a href="daftar.html" class="btn-primary">Daftar</a>
   
           </div>
         </div>
