--- a/blog.html
+++ b/blog.html
@@ -16,30 +16,38 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light " style="height: 80px;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="asset/logo.svg" alt="Logo" width="48 " height="48" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="navbar-nav me-auto">
-            <a class="nav-link" href="index.html">Beranda</a>
-            <a class="nav-link" href="cari-dokter.html">Cari Dokter</a>
-            <a class="nav-link" href="blog.html">Artikel</a>
-            <a class="nav-link" href="toko-obat.html">Toko Obat</a>
-          </div>
-          <div class="navbar-nav align-items-center">
-          <img src="asset/search.svg" alt="Icon 2" width="24" height="24" class="icon">
-          <img src="asset/cart.svg" alt="Icon 1" width="24" height="24" class="icon">
-          <a class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0"style="min-width: 144px;" href="daftar.html" >Daftar</a>
-          <a class="btn btn-success ms-lg-3" style="min-width: 144px;" href="login.html">Masuk</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-body">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="image/logo.png" alt="" width="50" height="50">
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" style="font-weight: 700; color: var(--teal);"  aria-current="page" href="index.html">Beranda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cek-dokter.html">Cek Dokter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blog.html">Artikel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="toko.html">Toko Obat</a>
+              </li>
+            </ul>
+            <a href="#" class="icon-menu" id="search">
+              <iconify-icon icon="ri:search-line" height="28"></iconify-icon>
+            </a>
+            <a href="#" class="icon-menu" id="cart">
+              <iconify-icon class="text-center" icon="solar:cart-4-bold" height="28"></iconify-icon>
+            </a>
+            <a href="login.html" class="navbar-action-item">Masuk</a>
+            <a href="daftar.html" class="btn-primary">Daftar</a>
+  
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
   <!-- End Navbar -->
 
 
