--- a/daftar.html
+++ b/daftar.html
@@ -56,7 +56,7 @@
       </nav>
   <!-- End Navbar -->
   <div class="text-daftar">
-    <h4>Daftar Akun</h4>
+    <h4>Daftar</h4>
   </div>
       <div class="container d-flex justify-content-center">
         <form>
